[package]
name = "recs"
version = "0.1.0"
authors = ["theor <theo.richart@gmail.com>"]

[dependencies]
piston_window = "0.76.0"
specs = { git = "https://github.com/slide-rs/specs" }
rayon = "*"
specs-derive = { git = "https://github.com/slide-rs/specs" }
find_folder = "*"
# image = "*"
piston2d-sprite = "*"
piston2d-graphics = "*"
flame = "*"
fps_counter = "*"
# gfx = "*"