[package]
name = "recs"
version = "0.1.0"
authors = ["theor <theo.richart@gmail.com>"]

[dependencies]
piston_window = "0.76.0"
# specs = { git = "https://github.com/slide-rs/specs" }
specs = { path = "C:/Users/theor/.cargo/git/checkouts/specs-18d2bb2ce407da15/c2c450a" }
rayon = "*"
specs-derive = { git = "https://github.com/slide-rs/specs" }
find_folder = "*"
# image = "*"
piston2d-sprite = "*"
piston2d-graphics = "*"
flame = "*"
fps_counter = "*"
hibitset = "*"
ntree = "*"
# gfx = "*"

[profile.release]
debug = true